network: don't crash on hidden SSIDs

APs that don't broadcast their SSID will return NULL from
nm_access_point_get_ssid() (since that's easier to check in C
using an if statement than returning a zero-length GByteArray).
Thus the code shouldn't try to dereference the SSID byte array
since it could be NULL.

But in fact, the panel shouldn't be showing hidden APs anywhere
in the UI, since the user needs to manually enter the SSID to
connect to it anyway.  So just ignore hidden APs like nm-applet
does.

Signed-off-by: Dan Williams <dcbw@redhat.com>

https://bugzilla.gnome.org/show_bug.cgi?id=672922